grammar.js
    structure: $ => semiList($.structure_item),

    structure_item: $ => choice(
      $.type_definition,
      $.struct_definition,
      $.enum_definition,
      $.value_definition,
      $.const_definition,
      $.function_definition,
      $.test_definition,
      $.trait_definition,
      $.impl_definition,
    ),

    function_definition: $ => seq(
      optional($.visibility),
      optional($.external_linkage),
      'fn',
      $.function_identifier,
      optional($.type_parameters),
      optional($.parameters),
      optional($.return_type),
      choice(
        $.block_expression,
        seq('=', $.external_source)
      )
    ),

    impl_definition: $ => seq(
      optional($.visibility),
      'impl',
      optional($.type_parameters),
      $.qualified_type_identifier,
      optional(seq(
        'for',
        $.qualified_type_identifier,
        optional($.type_parameters),
      )),
      'with',
      $.function_identifier,
      $.parameters,
      optional($.return_type),
      $.block_expression,
    ),

    expression: $ => choice(
      $.simple_expression,
      $.if_expression,
      $.loop_expression,
      $.match_expression,
      $.for_expression,
      $.for_in_expression,
      $.try_expression,
    ),

    simple_expression: $ => choice(
      $.atomic_expression,
      $.qualified_identifier,
      $.unary_expression,
      $.binary_expression,
      $.struct_expression,
      $.nonempty_block_expression,
      $.anonymous_lambda_expression,
      $.anonymous_matrix_lambda_expression,
      $.constructor_expression,
      $.apply_expression,
      $.array_access_expression,
      $.dot_apply_expression,
      $.access_expression,
      $.method_expression,
      $.unit_expression,
      $.tuple_expression,
      $.constraint_expression,
      $.array_expression,
      $.unwrap_expression,
      '_'
    ),

    atomic_expression: $ => choice(
      $.string_interpolation,
      $.literal
    ),

    literal: $ => choice(
      $.boolean_literal,
      $.float_literal,
      $.integer_literal,
      $.byte_literal,
      $.char_literal,
      $.string_literal,
      $.bytes_literal,
      $.multiline_string_literal,
    ),

    boolean_literal: _ => choice('true', 'false'),

    integer_literal: _ => token(choice(
      /[0-9][0-9_]*L?/,
      /0[xX][0-9a-fA-F_]+L?/,
      /0[oO][0-7_]+L?/,
      /0[bB][01_]+L?/,
    )),

    // integerPart = /[0-9][_0-9]*/,
    // decimalPart = /[_0-9]+/,
    // exponentPart = /[eE][0-9][_0-9]*/,
    // float_literal: _ => /[0-9][_0-9]*\.[_0-9]*([eE][0-9][_0-9]*)?/,

    binary_expression: $ => {
      const table = [
        [PREC.multiplicative, choice(...multiplicative_operators)],
        [PREC.additive, choice(...additive_operators)],
        [PREC.comparative, choice(...comparative_operators)],
        [PREC.and, '&&'],
        [PREC.or, '||'],
        [PREC.pipe, $.pipe_operator],
      ]

      return choice(...table.map(([precedence, operator]) =>
        //@ts-ignore
        prec.left(precedence, seq(
          $.expression,
          //@ts-ignore
          operator,
          $.expression
        ))
      ))
    },

    block_expression: $ => seq(
      '{',
      semiList($.statement_expression),
      '}',
    ),

    nonempty_block_expression: $ => seq(
      '{',
      semiList1($.statement_expression),
      '}'
    ),

    anonymous_lambda_expression: $ => seq(
      'fn',
      $.parameters,
      optional($.return_type),
      $.block_expression
    ),

    anonymous_matrix_lambda_expression: $ => seq(
      'fn',
      '{',
      semiList($.matrix_case_clause),
      '}',
    ),

    matrix_case_clause: $ => seq(
      $.pattern,
      optional(seq(',', $.pattern)),
      '=>',
      $.case_clause_body,
    ),

    constructor_expression: $ => choice(
      $.uppercase_identifier,
      seq($.qualified_type_identifier, $.colon_colon, $.uppercase_identifier)
    ),

    argument: $ => choice(
      seq(
        optional($.argument_label),
        $.expression
      ),
      $.labeled_identifier
    ),

    apply_expression: $ => prec(PREC.apply, seq(
      $.simple_expression,
      optional(choice('!', '?')),
      '(',
      commaList($.argument),
      ')'
    )),

    case_clause_body: $ => choice(
      $.assign_expression,
      $.while_expression,
      seq('break', commaList($.expression)),
      seq('continue', commaList($.expression)),
      $.return_expression,
      $.raise_expression,
      $.expression,
    ),

    statement_expression: $ => choice(
      $.let_expression,
      $.let_mut_expression,
      $.assign_expression,
      $.named_lambda_expression,
      $.named_matrix_expression,
      $.while_expression,
      seq('break', commaList($.expression)),
      seq('continue', commaList($.expression)),
      $.return_expression,
      $.raise_expression,
      $.expression
    ),

    let_expression: $ => seq(
      'let',
      $.pattern,
      optional($.type_annotation),
      '=',
      $.expression
    ),

    named_matrix_expression: $ => seq(
      'fn',
      $.lowercase_identifier,
      '{',
      semiList($.matrix_case_clause),
      '}',
    ),

    loop_expression: $ => seq(
      'loop',
      $.simple_expression,
      optional(seq(',', $.simple_expression)),
      '{',
      semiList($.matrix_case_clause),
      '}',
    ),

    pattern: $ => choice(
      $.simple_pattern,
      $.as_pattern,
      $.or_pattern
    ),

    simple_pattern: $ => choice(
      '_',
      $.dot_dot,
      seq('(', $.pattern, ')'),
      $.literal,
      $.lowercase_identifier,
      $.labeled_identifier,
      $.constructor_pattern,
      $.tuple_pattern,
      $.constraint_pattern,
      $.array_pattern,
      $.struct_pattern
    ),

    type: $ => choice(
      $.tuple_type,
      $.function_type,
      $.apply_type,
      $.any
    ),

    tuple_type: $ => seq('(', commaList($.type), ')'),

    function_type: $ => seq('(', commaList($.type), ')', '->', $.type),

    apply_type: $ => seq($.qualified_type_identifier, optional($.type_arguments)),

    type_arguments: $ => seq(
      '[',
      commaList1($.type),
      ']'
    ),

    type_annotation: $ => seq($.colon, $.type),

    return_type: $ => seq('->', $.type, optional(seq('!', optional($.type)))),

    parameter: $ => seq(
      $.parameter_label,
      optional($.type_annotation),
      optional(seq('=', $.expression)),
    ),

    parameters: $ => seq(
      '(',
      commaList($.parameter),
      ')'
    ),

    uppercase_identifier: _ => /[\p{Uppercase_Letter}][_\p{XID_Continue}]*/,
    lowercase_identifier: _ => /[_[\p{XID_Start}--\p{Uppercase_Letter}]][_\p{XID_Continue}]*/v,
    identifier: $ => choice(
      $.uppercase_identifier,
      $.lowercase_identifier,
    ),

    colon: _ => ':',
    // colon_colon: _ => '::',

    qualified_identifier: $ => choice(
      $.lowercase_identifier,
      seq($.package_identifier, $.dot_identifier)
    ),
    qualified_type_identifier: $ => choice(
      $.identifier,
      seq($.package_identifier, $.dot_identifier)
    ),

    function_identifier: $ => choice(
      $.lowercase_identifier,
      seq($.qualified_type_identifier, $.colon_colon, $.lowercase_identifier)
    ),
